code reformat